# wasm-rp2040

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_wasm.sh
hello/: Cargo.toml
hello/src/: lib.rs
src/: main.c
